--- a/src/app/components/categories-list/categories-list.component.html
+++ b/src/app/components/categories-list/categories-list.component.html
@@ -1,3 +1,3 @@
-<div class="list-category">
-    <app-category></app-category>
-</div>
+<ul *ngFor="let category of categories">
+    <li>{{ category.title }}</li>
+</ul>
