--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header-top">
-        <h1 class="site-title">Balade</h1>
+        <h1 class="site-title">LaBelleBalade</h1>
         <nav class="navbar">
             <ul class="navbar_list">
                 <li class="navbar_list_item"><a routerLink="">Categories</a></li>
