--- a/src/app/components/balade-list/balade-list.component.html
+++ b/src/app/components/balade-list/balade-list.component.html
@@ -1,4 +1,16 @@
-<div *ngFor="let balade of balades">
-    <div>{{ balade.title }}</div>
-    <div>{{ balade.description }}</div>
-</div>
+<main class="main">
+    <div class="balade-list">
+        <div *ngFor="let balade of balades">
+            <div class="balade-list_item" *ngIf="balade.idCategory == id">
+                <h3 class="balade-list_item_title" >{{ balade.title }}</h3>
+                <img src="{{ balade.imgUrl }}" alt="{{ balade.title }}" class="balade-list_item_image">
+                <div class="balade-info">
+                    <div>{{ balade.date | date: 'dd/MM/yyyy à HH:mm'}}</div>
+                    <div>{{ balade.location }}</div>
+                    <div>{{ balade.kilometers }}</div>
+                </div>
+                <div>{{ balade.description }}</div>
+            </div>
+        </div>
+    </div>
+</main>
