--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* Fonts */
-/* Regular */
-/* Semi Bold */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 /* Reset CSS */
 html, body, div, span, applet, object, iframe,
@@ -31,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
 }
 ol, ul {
 	list-style: none;
