création d'une route personnalisée pour filtrer avec json db server

--- a/src/app/components/balade-list/balade-list.component.css
+++ b/src/app/components/balade-list/balade-list.component.css
@@ -25,3 +25,11 @@
 .balade-list_item_image {
     margin: 10px 0;
 }
+.balade-info {
+    display: flex;
+    flex-direction: row;
+    padding: 15px 0;
+}
+.balade-info_item {
+    margin-right: 40px;
+}
